--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 }
 body {
     margin: 40px 0;
-    background: #1FF;
+    background: #F5F1F0;
     color: #222;
     font-size: 1.1em;
     font-family: Gibson, Helvetica Neue, sans-serif;
@@ -40,7 +40,7 @@ p {
     width: 80%;
     border: 4px solid #041BB2;
     border-radius: 10px;
-    background: #2441ff;
+    background: #0E9CFF;			/*#2441ff;*/
     display: -webkit-flex;
     display: flex;
 }
@@ -96,7 +96,7 @@ a:focus {
     padding: 25px;
     border: 2px solid rgba(36, 65, 255, .9);
     border-radius: inherit;
-    background: radial-gradient(circle, lightblue, #fff, aqua);
+    background: #FFF;
     -webkit-flex-grow: 1;
 }
 
@@ -149,6 +149,7 @@ Page: Contact
     background-size: 20px 20px;
     padding: 0 0 0 30px;
     margin: 0 0 10px;
+    text-decoration: none;
 }
 .contact-info li.phone a {
  background-image: url("../img/phone.png");
