--- a/css/style.css
+++ b/css/style.css
@@ -57,13 +57,8 @@ p {
     margin: 10px;
     border-radius: 10px;
     background: radial-gradient(circle, lightblue, #fff, aqua);
-    /*background: aqua;*/
-    /*background: #6364FF;*/
-    /*background: #048DFF;*/
-    /*background: #70968C;*/
     text-align: center;
     color: #000;
-    /*color: #FFF;*/
     -webkit-flex-grow: 1;
 }
 .nav a {
@@ -156,6 +151,19 @@ Page: Contact
 }
 .contact-info li.mail a {
  background-image: url("../img/mail.png");
+}
+
+/***************************
+Training
+***************************/
+.training {
+    color: #000;
+    text-decoration: none;
+}
+.btn {
+    background: aqua;
+}
+
 }
 
 /***************************
